# VoiceTurk

./: .env.example  .gitignore  AGENTS.md  DEPLOY_VPS.md  README.md  docker-compose.yml  metadata.json  package-lock.json  package.json  skills-lock.json
.agora/: project.json
backend/: .env.example  .gitignore  package-lock.json  package.json
docs/: 00-project-context.md  01-architecture-rules.md  02-entity-state-machine.md  03-api-boundary.md  04-vibe-phases.md  05-demo-flow.md  (+12 more)
services/api/: pyproject.toml  voiceturk.db-shm  voiceturk.db-wal
services/api/app/: main.py
services/api/app/adapters/auth/: security.py
services/api/app/adapters/check/: local.py  text.py
services/api/app/adapters/http/: router.py  schemas.py
services/api/app/adapters/persistence/: memory.py  sqlite.py
services/api/app/adapters/proof/: local_hash.py
services/api/app/adapters/queue/: in_process.py
services/api/app/adapters/realtime/: agora.py  convoai.py
services/api/app/adapters/storage/: local.py  minio.py
services/api/app/application/: errors.py  service.py
services/api/app/composition/: container.py
services/api/app/core/: config.py
services/api/app/domain/: entities.py  enums.py  policies.py
services/api/app/jobs/: __init__.py  deep_check_worker.py
services/api/app/ports/: providers.py  repositories.py
services/api/scripts/: probe_agora_agent_join.py
services/api/tests/: test_agora_agent_studio.py  test_demo_flow.py  test_quality_pipeline.py  test_recording_upload_contract.py
services/api/voiceturk_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+156 files in other folders)
